--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,18 @@
         <servlet-name>AddProductServlet</servlet-name>
         <servlet-class>Controller.AddProductServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>UpdateProductServlet</servlet-name>
+        <servlet-class>Controller.UpdateProductServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DeleteProductServlet</servlet-name>
+        <servlet-class>Controller.DeleteProductServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ParseProductInfoServlet</servlet-name>
+        <servlet-class>Controller.ParseProductInfoServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ViewProductServlet</servlet-name>
         <url-pattern>/ViewProductServlet</url-pattern>
@@ -15,6 +27,18 @@
     <servlet-mapping>
         <servlet-name>AddProductServlet</servlet-name>
         <url-pattern>/AddProductServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateProductServlet</servlet-name>
+        <url-pattern>/UpdateProductServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeleteProductServlet</servlet-name>
+        <url-pattern>/DeleteProductServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ParseProductInfoServlet</servlet-name>
+        <url-pattern>/ParseProductInfoServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
