--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -64,7 +64,7 @@
         <web-resource-collection>
             <web-resource-name>wrcoll</web-resource-name>
             <description/>
-            <url-pattern>/admin</url-pattern>
+            <url-pattern>/admin/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <description/>
