--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,6 +24,10 @@
         <servlet-name>ParseProductServlet</servlet-name>
         <servlet-class>Controller.ParseProductServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ShopCartServlet</servlet-name>
+        <servlet-class>Controller.ShopCartServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ViewProductServlet</servlet-name>
         <url-pattern>/ViewProductServlet</url-pattern>
@@ -48,6 +52,10 @@
         <servlet-name>ParseProductServlet</servlet-name>
         <url-pattern>/ParseProductServlet</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ShopCartServlet</servlet-name>
+        <url-pattern>/ShopCartServlet</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
@@ -58,7 +66,6 @@
             index.jsp
         </welcome-file>
     </welcome-file-list>
-    
     <security-constraint>
         <display-name>Constraint1</display-name>
         <web-resource-collection>
@@ -71,7 +78,6 @@
             <role-name>manager</role-name>
         </auth-constraint>
     </security-constraint>
-
     <login-config>
         <auth-method>FORM</auth-method>
         <realm-name>JDBCRealm</realm-name>
@@ -80,7 +86,6 @@
             <form-error-page>/error.xhtml</form-error-page>
         </form-login-config>
     </login-config>
-
     <security-role>
         <description/>
         <role-name>manager</role-name>
